[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/buildings/maintenance.png" type="Texture" id=1]
[ext_resource path="res://objects/buildings/Maintenance.gd" type="Script" id=2]
[ext_resource path="res://ui/PopupBox.png" type="Texture" id=3]
[ext_resource path="res://ui/UI_theme.tres" type="Theme" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 40 )

[node name="Maintenance" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionHighlight" type="ColorRect" parent="."]
visible = false
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Maintenance" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PopupUI" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup_Sprite" type="Sprite" parent="PopupUI"]
position = Vector2( 64, -72 )
scale = Vector2( 1.125, 1.125 )
texture = ExtResource( 3 )

[node name="Upgrade_Button" type="Button" parent="PopupUI"]
margin_left = 8.0
margin_top = -128.0
margin_right = 120.0
margin_bottom = -108.0
text = "Upgrade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move_Button" type="Button" parent="PopupUI"]
margin_left = 8.0
margin_top = -104.0
margin_right = 120.0
margin_bottom = -84.0
text = "Move"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scrap_Button" type="Button" parent="PopupUI"]
margin_left = 8.0
margin_top = -80.0
margin_right = 120.0
margin_bottom = -60.0
text = "Scrap"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[connection signal="pressed" from="PopupUI/Upgrade_Button" to="." method="_on_Upgrade_Button_pressed"]
[connection signal="pressed" from="PopupUI/Move_Button" to="." method="_on_Move_Button_pressed"]
[connection signal="pressed" from="PopupUI/Scrap_Button" to="." method="_on_Scrap_Button_pressed"]
